# SoftClamp

./: CMakeLists.txt
SoftClamp/: SoftClamp.cpp  SoftClamp.h  pluginMain.cpp
